# project-monte-carlo-world-cup-2026

./: CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.txt  README.md  pyproject.toml
analyses/esp_fra_2026/: README.md  README_reproducibilidad_ESP_FRA.md
analyses/spain-2026-champions/: README.md
config/: esp_fra_match_config.json  esp_fra_player_based_wcpi_v1.json
data/final/: README.md  esp_fra_reproducibility_manifest_player_based_wcpi_v1.csv  spain_2026_matches.csv  spain_2026_player_highlights.csv  spain_2026_sources.csv  spain_2026_squad.csv  spain_2026_team_stats.csv  spain_2026_team_summary.csv
data/model_inputs/: esp_fra_team_indices_player_based_wcpi.csv
data/player_based/: esp_fra_player_matrix_v1_20260712.csv
docs/: DATA_AUDIT_SPAIN_2026_FINAL.md  SPAIN_2026_FINAL_DATA_DICTIONARY.md  SPAIN_2026_VALIDATION_STATUS.md  architecture.md  getting-started.md  index.md  limitations.md  roadmap.md
examples/: portugal_croatia_ronaldo.py  spain_austria.py
notebooks/: 01_build_team_indexes.ipynb  01_build_team_indexes_rich.ipynb  02_spain_vs_austria.ipynb  02_spain_vs_austria_rich.ipynb  03_portugal_croatia_ronaldo.ipynb  03_portugal_croatia_ronaldo_rich.ipynb  ESP_FRA_player_based_WCPI.ipynb
pmcw/: __init__.py  cli.py  config.py  events.py  group.py  io.py  match.py  poisson.py  ratings.py
pmcw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: simulate_esp_fra_sequence.py
tests/: test_esp_fra_player_based_wcpi.py  test_group.py  test_match.py  test_poisson.py  test_spain_2026_final_data.py
(+37 files in other folders)
