[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcw"
version = "3.0.0"
description = "Reusable Monte Carlo engine for football tournament analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Juan Fernando Sánchez"}
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5"
]

[project.scripts]
pmcw = "pmcw.cli:main"

[tool.setuptools.packages.find]
include = ["pmcw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
